# DialectMapper

./: .gitignore  README.md  pyproject.toml
dialect_mapper/: __init__.py  mapper.py  plotter.py
dialect_mapper/development/: final_pass_dialects.csv  final_pass_dialects_supplemental.csv  first_pass_dialects.csv  nye_fylker_2024.ipynb  nye_fylkes_2024.ipynb
dialect_mapper/mapping_data/: NB_Tale_Informantdata_module_1_updated.csv  NB_Tale_Informantdata_module_2_updated.csv  NB_Tale_Informantdata_module_3_updated.csv  card4_region_geojson.json  card5_region_geojson.json  dialekter_geojson.json  muni_county_namedDialect_numericDialect_mapping_manual_additions_renamed.csv  muni_county_namedDialect_numericDialect_mapping_manual_additions_renamed_2024.csv  muni_county_namedDialect_numericDialect_mapping_manual_additions_renamed_2024_cardinals.csv  nbtale_transform.csv  ndc_transform.csv  northern_region.json  norway_place_names.txt  npsc_transform.csv  rundkast_regions_geojson.json  stortinget_transform.csv
dialect_mapper/tests/: test_mapper.py
